tests/ui/imports/ambiguous-16.stderr
error[E0659]: `ConfirmedTranscriptHashInput` is ambiguous
  --> $DIR/ambiguous-16.rs:22:21
   |
LL | use crate::framing::ConfirmedTranscriptHashInput;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `ConfirmedTranscriptHashInput` could refer to the struct imported here
  --> $DIR/ambiguous-16.rs:18:13
   |
LL |     pub use self::public_message::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `ConfirmedTranscriptHashInput` to disambiguate
note: `ConfirmedTranscriptHashInput` could also refer to the struct imported here
  --> $DIR/ambiguous-16.rs:19:13
   |
LL |     pub use self::public_message_in::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `ConfirmedTranscriptHashInput` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
